Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: 10.4.14, 10.4.17
-
Component/s: Server
-
Labels:
Description
Server crashes and in full backtrace we can see the following crashing thread:
Thread 1 (Thread 0x7f6ea5be0700 (LWP 22860)):
|
#0 0x00007f7005f01a71 in pthread_kill () from /lib64/libpthread.so.0
|
No symbol table info available.
|
#1 0x0000560e44d517ae in handle_fatal_signal (sig=11) at /home/buildbot/buildbot/build/sql/signal_handler.cc:343
|
curr_time = 1598152611
|
tm = {tm_sec = 51, tm_min = 16, tm_hour = 12, tm_mday = 23, tm_mon = 7, tm_year = 120, tm_wday = 0, tm_yday = 235, tm_isdst = 0, tm_gmtoff = 32400, tm_zone = 0x560e47c0c460 "KST"}
|
print_invalid_query_pointer = false
|
#2 <signal handler called>
|
No symbol table info available.
|
#3 0x0000560e44af622e in thd_clear_errors (thd=thd@entry=0x7f5ce02d3c38) at /home/buildbot/buildbot/build/sql/sql_class.cc:311
|
No locals.
|
#4 0x0000560e44afb06f in THD::change_user (this=this@entry=0x7f5ce02d3c38) at /home/buildbot/buildbot/build/sql/sql_class.cc:1420
|
No locals.
|
#5 0x0000560e44afb269 in THD::reset_for_reuse (this=this@entry=0x7f5ce02d3c38) at /home/buildbot/buildbot/build/sql/sql_class.cc:1632
|
No locals.
|
#6 0x0000560e44c2fbf5 in CONNECT::create_thd (this=this@entry=0x560e496d5308, thd=thd@entry=0x7f5ce02d3c38) at /home/buildbot/buildbot/build/sql/sql_connect.cc:1500
|
res = <optimized out>
|
thd_reused = true
|
#7 0x0000560e44a810aa in cache_thread (thd=0x7f5ce02d3c38) at /home/buildbot/buildbot/build/sql/mysqld.cc:2720
|
abstime = {tv_sec = 1598152892, tv_nsec = 842931000}
|
#8 one_thread_per_connection_end (thd=0x7f5ce02d3c38, put_in_cache=<optimized out>) at /home/buildbot/buildbot/build/sql/mysqld.cc:2783
|
wsrep_applier = <optimized out>
|
#9 0x0000560e44c2ff2b in do_handle_one_connection (connect=connect@entry=0x560e4b406c18) at /home/buildbot/buildbot/build/sql/sql_connect.cc:1423
|
create_user = <optimized out>
|
thr_create_utime = <optimized out>
|
thd = 0x7f5ce02d3c38
|
#10 0x0000560e44c3007d in handle_one_connection (arg=arg@entry=0x560e4b406c18) at /home/buildbot/buildbot/build/sql/sql_connect.cc:1316
|
connect = 0x560e4b406c18
|
#11 0x0000560e4526abdd in pfs_spawn_thread (arg=0x560e9dc031a8) at /home/buildbot/buildbot/build/storage/perfschema/pfs.cc:1869
|
typed_arg = 0x560e9dc031a8
|
user_arg = 0x560e4b406c18
|
pfs = <optimized out>
|
user_start_routine = 0x560e44c30040 <handle_one_connection(void*)>
|
klass = <optimized out>
|
#12 0x00007f7005efce75 in start_thread () from /lib64/libpthread.so.0
|
No symbol table info available.
|
#13 0x00007f7004d5a8fd in clone () from /lib64/libc.so.6
|
No symbol table info available.
|