MDEV-23542: Server crashes in thd_clear_errors()

Chek if thd->mysys_var is avaliable